--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Project WebKu</title>
   </head>
   <body>
+    <h1>Welcome!</h1>
+    <header>Website Header</header>
     <h1>Hello Git!</h1>
     <footer>Website Footer</footer>
   </body>
